# workspace

./: .env.schema  .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  lxd_cloud_init.yaml  lxd_cloud_init_project.yaml  pyproject.toml  run.py
.github/: pull_request_template.md
.github/workflows/: build-and-publish.yml  run_tests.yml
app/: api_registry.py  config.py  main.py
app/commons/auth_service/: __init__.py
app/commons/guacamole_client/: __init__.py
app/commons/lxd_client/: __init__.py
app/commons/password/: __init__.py
app/commons/psql_service/: __init__.py
app/models/: base.py  models_connection.py  models_lxd.py  models_permission.py  sql_lxd.py
app/resources/: error_handler.py
app/routers/: api_root.py
app/routers/api_connection/: api_connection.py  api_permission.py  utils.py
app/routers/api_guacamole/: api_connection.py  api_permission.py  utils.py
app/routers/api_health/: api_health.py
app/routers/api_lxd/: api_lxd.py
migrations/: env.py
migrations/scripts/: create_db.sql
migrations/versions/: 97ed43f3e445_adding_lxd_container_table.py
tests/: conftest.py  pytest.ini
tests/app/routers/api_gaucamole/: test_api_connection.py  test_api_permission.py
tests/app/routers/api_guacamole/: test_api_connection.py  test_api_permission.py
