[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["gregmccoy <greg@gkmc.ca>"]
license = "AGPL 3.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
httpx = "^0.23.0"
pilot-platform-common = "^0.0.48"
uvicorn = "^0.18.3"
fastapi-utils = "^0.2.1"
psycopg2 = "^2.9.3"
guacapy = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
testcontainers = "^3.6.1"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
