[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["gregmccoy <greg@gkmc.ca>"]
license = "AGPL 3.0"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
httpx = "^0.23.0"
pilot-platform-common = "0.1.3"
uvicorn = "^0.18.3"
fastapi-utils = "^0.2.1"
psycopg2 = "^2.9.3"
guacapy = "^0.11.0"
FastAPI-SQLAlchemy = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-env= "0.6.2"
testcontainers = "^3.6.1"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"
alembic = "1.7.7"

[[tool.poetry.source]]
name = "pylxd"
url = "https://github.com/lxc/pylxd"
default = false
secondary = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
